fix generate bug

--- a/tools/auto_gen/web/config.json
+++ b/tools/auto_gen/web/config.json
@@ -23,8 +23,8 @@
 	          "name":"gender",
 	          "title":"gender_",
 	          "enum" : {
-	          	"male" : "male_",
-	          	"female" : "female_"
+	          	"male" : "男",
+	          	"female" : "女"
 	          }
 	        }
         ]
