--- a/tools/auto_gen/web/build.xml
+++ b/tools/auto_gen/web/build.xml
@@ -2,8 +2,8 @@
 <project default="genfiles" basedir=".">
 	<target name="genfiles" description="Generate the files">
 		<taskdef name="mbgenerator" classname="org.mybatis.generator.ant.GeneratorAntTask"
-			classpath="mybatis-generator-core-1.3.1.jar" />
-		<mbgenerator overwrite="true" configfile="src/main/resources/config.xml"
+			classpath="server_template/mybatis-generator/mybatis-generator-core-1.3.1.jar" />
+		<mbgenerator overwrite="true" configfile="config.xml"
 			verbose="false">
 		</mbgenerator>
 	</target>
